--- a/config.yaml
+++ b/config.yaml
@@ -7,8 +7,16 @@ target_url: "https://pmos.sx.sgcc.com.cn/#/dashboard"
 
 # 浏览器设置
 browser:
-  headless: false            # 是否无头模式（调试时建议 false）
-  slow_mo: 300               # 操作间隔（毫秒），避免过快
+  # 连接模式:
+  #   "connect" (默认) - 通过 CDP 连接已打开且已登录的 Chrome 浏览器
+  #     要求: Chrome 启动时带 --remote-debugging-port 参数
+  #     示例: google-chrome --remote-debugging-port=9222
+  #   "launch" - 启动全新的 Chromium 浏览器（需自行处理登录）
+  mode: "connect"
+  cdp_url: "http://localhost:9222"  # Chrome DevTools Protocol 地址
+  target_url_pattern: "pmos.sx.sgcc.com.cn"  # 用于匹配目标标签页的 URL 关键词
+  headless: false            # 仅 launch 模式有效：是否无头模式
+  slow_mo: 300               # 仅 launch 模式有效：操作间隔（毫秒）
   timeout: 30000             # 全局超时（毫秒）
   download_dir: "./data/exports"  # 导出文件下载目录
   viewport:
